# SPH-EXA_mini-app

./: 2DCHANGES.txt  CMakeLists.txt  Makefile  build.sh  constants.py  debug_build.sh  debug_gdb.sh  plot.py  profile.sh  run.sh
bigfiles/: .gitattributes
doc/: SPHEXA_Octre.mdj  SPH_Exa_MiniApp.mdj  SPH_Exa_MiniApp_UML_v0.1.mdj  miniApp.parts.dictionary.xlsx
doc/decorator_example/: contribution_decorator_abstract.h  contribution_interface.h  core_contribution.h  decorator_example.cpp  density_contribution.cpp  density_contribution.h  momentum_contribution.cpp  momentum_contribution.h
doc/posterPASC18/: baposter.cls  description200_final.docx  pasc18.tex
domain/include/cstone/: domain.hpp  mortoncode.hpp  octree.hpp  octree_internal.hpp
domain/include/cstone/cuda/: gather.cu  gather.cuh
domain/include/cstone/domain/: domain.hpp
domain/include/cstone/sfc/: mortoncode.hpp
domain/include/cstone/tree/: octree_internal.hpp
gravity/include/barnes-hut/: gravity.hpp  gravityTree.hpp  gravityTreeWalk.cpp  gravityTreeWalk.hpp  leafGravity.hpp
include/: Octree.hpp  ParticlesData.hpp  Timer.hpp
include/sph/: IAD.hpp  density.hpp  findNeighbors.hpp  gravityTreeWalk.hpp  momentumAndEnergyIAD.hpp
include/sph/cuda/: cudaDensity.cu  cudaFindNeighbors.cu  cudaIAD.cu  cudaMomentumAndEnergyIAD.cu  cudaParticlesData.cuh  sph.cuh
scripts/ci/: compile.sh
scripts/reframe/: README.md  miniapp.py  miniapp_gperftools.py  miniapp_mpip.py  miniapp_perftools-lite-loops.py  miniapp_perftools-lite.py  miniapp_strongscaling.py  sqpatch.py
scripts/reframe/common/sphexa/: sanity.py
scripts/reframe/plot/: common.py  plot.py
scripts/reframe/src_cpu/: SqPatchDataGenerator.hpp  SqPatchFileWriter.hpp  sqpatch.cpp
sphynx/: reframe-h  sphynx-1.4-evrard1M.patch  sphynx-1.4-square3d-CrayIntel-17.08.eb  sphynx-1.4.patch  sphynx_evrard.py  sphynx_square.py
sphynx/evrard1M/: outputmod.f90  parameters.f90  readdata.f90
sphynx/square3D1Mp/: outputmod.f90  parameters.f90  readdata.f90
sphynx/squarepatch10M/: init_scenario.f90  parameters.f90  readdata.f90
src/: SqPatch.hpp  SqPatchDataGenerator.hpp  WindblobDataGenerator.hpp  debug.hpp  evrard.cpp  gnuplot.hpp  sqpatch.cpp  windblob.cpp
src/evrard/: EvrardCollapseFileWriter.hpp  evrard.cpp
src/include/: BBox.hpp  DistributedDomain.hpp  Domain.hpp  Octree.hpp  ParticlesData.hpp  Task.hpp
src/include/sph/: IAD.hpp  density.hpp  equationOfState.hpp  findNeighbors.hpp  kernels.hpp  lookupTables.hpp  momentumAndEnergy.hpp  momentumAndEnergyIAD.hpp  positions.hpp  timestep.hpp  totalEnergy.hpp  updateSmoothingLength.hpp
src/include/sph/cuda/: cudaDensity.cu  cudaIAD.cu  cudaMomentumAndEnergyIAD.cu  sph.cuh
src/sedov/: SedovDataGenerator.hpp  sedov.cpp
test/hpx/: CMakeLists.txt  main.cpp  stub.cpp
test/unit/: CMakeLists.txt  test_buildTree.cpp
tools/: windblob_converter.cpp
